# rust-playground

./: .gitignore  Cargo.toml  README.md  api-desc.md
migrations/2025-09-15-225103-0000_create_users/: up.sql
src/: api_docs.rs  main.rs  schema.rs
