[package]
name = "nightsout-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.11.0"
actix-web = "4"
base64 = "0.22.1"
serde = "1.0.224"
serde_json = "1.0.145"
utoipa = { version = "5.3.1", features = ["macros"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
dotenvy = "0.15.7"
